# seL4_libs

./: CMakeLists.txt
libsel4muslcsys/include/muslcsys/: vsyscall.h
libsel4muslcsys/src/: sys_morecore.c  vsyscall.c
libsel4service/: CMakeLists.txt
libsel4service/include/service/: env.h  syscall.h
libsel4service/src/: syscall.c
libsel4vka/arch_include/riscv/vka/arch/: object.h
